--- a/index.html
+++ b/index.html
@@ -1,32 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./assets/styles/fonts.css">
+    <link rel="stylesheet" href="./assets/styles/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Glavnaya</title>
+    <title>Главная</title>
 </head>
 <body>
+
     <div class = "header">
-        <div class = "logo">
-            <img class = "logo__img" src="./images/logo.svg" alt="logosvg">
+        <div class = "header__logo-wrapper">
+            <img class = "header__logo-wrapper_img" src="./assets/images/logo.svg" alt="logosvg">
             <span class = "LaslesVPN">
                 LaslesVPN
             </span>
+        </div>
+        <div class = "header__logo">
 
         </div>
-        <div class = "logo">
-
-        </div>
-        <div class = "auth">
-            <span class = "About">
+        <div class = "header__auth">
+            <span class = "header__about">
                 About
             </span>
-            
-
         </div>
-
-
     </div>
     
 </body>
